--- a/Pynotes.ipynb
+++ b/Pynotes.ipynb
@@ -418,6 +418,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20384f40",
+   "metadata": {},
+   "source": [
+    "#IMP! Q. Please explain in simple psendo code how upper() function is not a function method of str class? (10marks)\n",
+    "\n",
+    "solution method-  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "65d387f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'upper' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mupper\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpython\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'upper' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "upper(\"python\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c7f27b40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(\"python\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "c6ad0922",
@@ -1086,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "107ce510",
    "metadata": {},
    "outputs": [
@@ -1096,13 +1149,13 @@
        "'german ss'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"GERMAN ß\".casefold() "
+    "\"GERMAN ß\".casefold() ##To aggressevely change the special char."
    ]
   },
   {
@@ -1306,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "2bf8601e",
    "metadata": {},
    "outputs": [
@@ -1322,7 +1375,7 @@
     }
    ],
    "source": [
-    "\"banana\".find(\"a\", 2)"
+    "\"banana\".find(\"a\", 2)1"
    ]
   },
   {
@@ -1715,6 +1768,154 @@
    "source": [
     "\n",
     "\"python\".endswith(\"py\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "42e7b764",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Q.\n",
+    "faculty_names = [\"Dr V Maths\", \"Dr D Maths\", \"Dr S Maths\", \"Md S Science\", \"Ms A Maths\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6e44ff1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dr V Maths\n",
+      "Dr D Maths\n",
+      "Dr S Maths\n",
+      "Ms A Maths\n"
+     ]
+    }
+   ],
+   "source": [
+    "for each in faculty_names:\n",
+    "    if each.endswith(\"Maths\") == True:\n",
+    "        print(each)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5fc35803",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ms A Maths\n"
+     ]
+    }
+   ],
+   "source": [
+    "for each in faculty_names:\n",
+    "    if (each.startswith(\"Dr\")!=True) and (each.endswith(\"Maths\")==True):\n",
+    "        print(each)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e3cb4ca0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ms A Maths\n"
+     ]
+    }
+   ],
+   "source": [
+    "for each in faculty_names:\n",
+    "    if not each.startswith(\"Dr\") and each.endswith(\"Maths\"):\n",
+    "        print(each)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c24483f3",
+   "metadata": {},
+   "source": [
+    "Palindrome:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "db6c80db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not Palindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q.\n",
+    "n = 1232\n",
+    "reverse = 0\n",
+    "temp = n\n",
+    "while temp != 0:\n",
+    "    reverse = (reverse * 10) + (temp % 10)\n",
+    "    temp = temp // 10\n",
+    "if n == reverse:\n",
+    "    print(\"Paindrome\")\n",
+    "else:\n",
+    "    print(\"Not Palindrome\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6e5837e",
+   "metadata": {},
+   "source": [
+    "Armstrong number:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "991d4b22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Armstrong number\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q.\n",
+    "num = 153\n",
+    "order = len(str(num))\n",
+    "sum = 0\n",
+    "temp = num\n",
+    "while temp > 0:\n",
+    "    digit = temp % 10\n",
+    "    sum += digit ** order\n",
+    "    temp //= 10\n",
+    "if num == sum:\n",
+    "    print(\"Armstrong number\")\n",
+    "else:\n",
+    "    print(\"Not Armstrong number\")"
    ]
   }
  ],
