--- a/Pynotes.ipynb
+++ b/Pynotes.ipynb
@@ -1917,6 +1917,508 @@
     "else:\n",
     "    print(\"Not Armstrong number\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c8b37aab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = [1,2,3,4,5]\n",
+    "for item in i:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8a826709",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 10\n",
+    "while i >0:\n",
+    "    print(i)\n",
+    "    i-=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "09f915ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in range(0,5):\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5b83baf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ece4d12b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pandas.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "45a0f8f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable int object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m l\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m a, b \u001b[38;5;129;01min\u001b[39;00m l:\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(a, b)\n",
+      "\u001b[1;31mTypeError\u001b[0m: cannot unpack non-iterable int object"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,4]\n",
+    "for a, b in l:\n",
+    "    print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "727c952f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l[0] = 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "67797db6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1000, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c9d41af",
+   "metadata": {},
+   "source": [
+    "## In a list of numbers find even numbers and replace them with 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "3c59c769",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l=[2,4,5,6,7,8,9,10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c0750920",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Even\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 2%2 == 0:\n",
+    "    print(\"Even\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "b199d3e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2\n",
+      "1 4\n",
+      "2 5\n",
+      "3 6\n",
+      "4 7\n",
+      "5 8\n",
+      "6 9\n",
+      "7 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for indx, item, in enumerate(l):\n",
+    "    print(indx, item)\n",
+    "    if item%2 ==\"0\":\n",
+    "        l[indx]=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "55646b2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The item value is :  2\n",
+      "The index is :  0\n",
+      "The item value is :  4\n",
+      "The index is :  1\n",
+      "The item value is :  5\n",
+      "The index is :  2\n",
+      "The item value is :  6\n",
+      "The index is :  3\n",
+      "The item value is :  7\n",
+      "The index is :  4\n",
+      "The item value is :  8\n",
+      "The index is :  5\n",
+      "The item value is :  9\n",
+      "The index is :  6\n",
+      "The item value is :  10\n",
+      "The index is :  7\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index , item in enumerate(l):\n",
+    "    print(\"The item value is : \" , item)\n",
+    "    print(\"The index is : \" , index)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3cd37e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index , item in enumerate(l):\n",
+    "    print(\"The item value is : \" , item)\n",
+    "    print(\"The index is : \" , index)\n",
+    "\n",
+    "if item % 2 == 0:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "0099e8da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l=[\"E\", \"P\", \"E\", \"P\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "3783d417",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 E\n",
+      "1 P\n",
+      "2 E\n",
+      "3 P\n"
+     ]
+    }
+   ],
+   "source": [
+    "for indx, item, in enumerate(l):\n",
+    "    print(indx, item)\n",
+    "    if item ==\"P\":\n",
+    "        l[indx]=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6512af01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['E', 0, 'E', 0]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "d217f693",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grade = [20,30,40,12,18,35]\n",
+    "names = [\"V\", \"A\", \"R\", \"S\", \"M\", \"D\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "a727a8a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20, 'V')\n",
+      "(30, 'A')\n",
+      "(40, 'R')\n",
+      "(12, 'S')\n",
+      "(18, 'M')\n",
+      "(35, 'D')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, grade_name_t in enumerate(zip(grade, names)):\n",
+    "    print(grade_name_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "60ef7aeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(7):\n",
+    "    if i % 2 == 0:\n",
+    "        continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "5bf228b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [1,2,3,4,5,6]\n",
+    "len(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "7296fc0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The list is natural\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in range(len(l)-1):\n",
+    "    if l [item+1]-l[item]!=1:\n",
+    "        #continue\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"The list is natural\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "e317c442",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The list is not natural\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in range(len(l)-1):\n",
+    "    if l[item-1]-l[item]!=1:\n",
+    "        print(\"The list is not natural\")\n",
+    "        #continue\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"The list is natural\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "62ac097e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l[1]-l[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "00c063bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The list is natural\n"
+     ]
+    }
+   ],
+   "source": [
+    "flag = False\n",
+    "for item in range (len(l)-1):\n",
+    "    if l[item+1]-l[item]!=1:\n",
+    "        flag == True\n",
+    "if flag == True:\n",
+    "    print(\"The list is not natural\")\n",
+    "else:\n",
+    "    print(\"The list is natural\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9246ed1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
