--- a/Pynotes.ipynb
+++ b/Pynotes.ipynb
@@ -2413,9 +2413,213 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bf5f0a71",
+   "metadata": {},
+   "source": [
+    "list: can have different data types value for any value contains in the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b7fc4d8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5b60be89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = numpy.array([1,2,3,4,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c2ff64f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "aa5d25fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "770f08cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict = {\"name\":\"Ansh\", \"age\": 20, \"course\": \"Python\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "77d0215b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name Ansh\n",
+      "age 20\n",
+      "course Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "for keys in dict.keys():\n",
+    "    print(keys, dict[keys])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "39509b0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution\n",
+      "Execution2\n"
+     ]
+    }
+   ],
+   "source": [
+    "if not 0:\n",
+    "    print(\"Execution\")\n",
+    "print(\"Execution2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f07bbe6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A 90\n",
+      "B 85\n",
+      "C 92\n"
+     ]
+    }
+   ],
+   "source": [
+    "students = [\"A\", \"B\", \"C\"]\n",
+    "marks = [90, 85, 92]\n",
+    "\n",
+    "for s, m in zip(students, marks):\n",
+    "    print(s, m)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9246ed1",
+   "id": "bc226de6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (4056832357.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[20], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    {[1 ,2, 3\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
+   "source": [
+    "{[1, 2, 3\n",
+    "4, 5, 6\n",
+    "7, 8, 9]}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "b92dce17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([1, 2, 3])\n",
+    "B = np.array([4, 5, 6])\n",
+    "C = np.array([7, 8, 9])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2c41dfe8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n",
+      "50\n",
+      "122\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A @ B)   \n",
+    "print(A @ C)   \n",
+    "print(B @ C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cbd400a",
    "metadata": {},
    "outputs": [],
    "source": []
