Day 3 commit codes

--- a/Pynotes.ipynb
+++ b/Pynotes.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "77ada4fa",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
        "30"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "1c60c229",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
        "'hellopython'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,10 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "feba690d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello , world!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"hello , world!\")"
    ]
@@ -143,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "fc8c2818",
    "metadata": {},
    "outputs": [],
@@ -192,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "92402306",
    "metadata": {},
    "outputs": [],
@@ -227,10 +235,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c0901977",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[99, 20, 30]\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [10,20,30]\n",
     "numbers[0] = 99\n",
@@ -247,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "f8f0bd7a",
    "metadata": {},
    "outputs": [
@@ -312,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "a384fd8c",
    "metadata": {},
    "outputs": [
@@ -320,7 +336,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2461319496208\n",
+      "2433831797264\n",
       "<class 'int'>\n",
       "10\n"
      ]
@@ -359,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "1a251cd6",
    "metadata": {},
    "outputs": [],
@@ -377,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "93021c0a",
    "metadata": {},
    "outputs": [
@@ -387,7 +403,7 @@
        "str"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "65d387f1",
    "metadata": {},
    "outputs": [
@@ -440,7 +456,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mupper\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpython\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mupper\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpython\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[1;31mNameError\u001b[0m: name 'upper' is not defined"
      ]
     }
@@ -451,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c7f27b40",
    "metadata": {},
    "outputs": [
@@ -472,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c6ad0922",
    "metadata": {},
    "outputs": [
@@ -507,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e3b64f13",
    "metadata": {},
    "outputs": [
@@ -549,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "fade9162",
    "metadata": {},
    "outputs": [
@@ -616,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "fc231b8b",
    "metadata": {},
    "outputs": [
@@ -685,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9d1e5e0d",
    "metadata": {},
    "outputs": [
@@ -734,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "8c1ab098",
    "metadata": {},
    "outputs": [
@@ -787,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "4e488823",
    "metadata": {},
    "outputs": [
@@ -897,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "3359d635",
    "metadata": {},
    "outputs": [
@@ -939,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "57b64916",
    "metadata": {},
    "outputs": [
@@ -973,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "aba96c6e",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "9680c686",
    "metadata": {},
    "outputs": [
@@ -1054,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "5e6f8ee6",
    "metadata": {},
    "outputs": [
@@ -1095,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "5bd14826",
    "metadata": {},
    "outputs": [
@@ -1139,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "107ce510",
    "metadata": {},
    "outputs": [
@@ -1175,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "8ec4c5f3",
    "metadata": {},
    "outputs": [
@@ -1209,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "482e29d9",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "0988b804",
    "metadata": {},
    "outputs": [
@@ -1316,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "c0ff8055",
    "metadata": {},
    "outputs": [
@@ -1338,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "c7486836",
    "metadata": {},
    "outputs": [
@@ -1412,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "35975109",
    "metadata": {},
    "outputs": [
@@ -1433,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "8718bf2d",
    "metadata": {},
    "outputs": [
@@ -1482,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "d4b7404b",
    "metadata": {},
    "outputs": [
@@ -1503,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "630db397",
    "metadata": {},
    "outputs": [
@@ -1551,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "9f5f5e2f",
    "metadata": {},
    "outputs": [
@@ -1598,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "b7cce052",
    "metadata": {},
    "outputs": [
@@ -1619,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "4c420ed4",
    "metadata": {},
    "outputs": [
@@ -1662,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "8516e45b",
    "metadata": {},
    "outputs": [
@@ -1683,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "f1f58643",
    "metadata": {},
    "outputs": [
@@ -1729,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "dc4aebc1",
    "metadata": {},
    "outputs": [
@@ -1750,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "81af4535",
    "metadata": {},
    "outputs": [
@@ -1772,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "42e7b764",
    "metadata": {},
    "outputs": [],
@@ -1783,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "6e44ff1f",
    "metadata": {},
    "outputs": [
@@ -1806,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "5fc35803",
    "metadata": {},
    "outputs": [
@@ -1826,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e3cb4ca0",
    "metadata": {},
    "outputs": [
@@ -1854,7 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "db6c80db",
    "metadata": {},
    "outputs": [
@@ -1890,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "991d4b22",
    "metadata": {},
    "outputs": [
@@ -1920,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c8b37aab",
    "metadata": {},
    "outputs": [
@@ -1944,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8a826709",
    "metadata": {},
    "outputs": [
@@ -1974,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "09f915ef",
    "metadata": {},
    "outputs": [
@@ -1997,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5b83baf2",
    "metadata": {},
    "outputs": [],
@@ -2007,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "ece4d12b",
    "metadata": {},
    "outputs": [],
@@ -2017,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "45a0f8f6",
    "metadata": {},
    "outputs": [
@@ -2041,7 +2057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "727c952f",
    "metadata": {},
    "outputs": [],
@@ -2051,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "67797db6",
    "metadata": {},
    "outputs": [
@@ -2080,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "3c59c769",
    "metadata": {},
    "outputs": [],
@@ -2090,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "c0750920",
    "metadata": {},
    "outputs": [
@@ -2109,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "b199d3e9",
    "metadata": {},
    "outputs": [
@@ -2137,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "55646b2c",
    "metadata": {},
    "outputs": [
@@ -2186,7 +2202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "0099e8da",
    "metadata": {},
    "outputs": [],
@@ -2196,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "3783d417",
    "metadata": {},
    "outputs": [
@@ -2220,7 +2236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "6512af01",
    "metadata": {},
    "outputs": [
@@ -2241,7 +2257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "d217f693",
    "metadata": {},
    "outputs": [],
@@ -2252,7 +2268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "a727a8a6",
    "metadata": {},
    "outputs": [
@@ -2276,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "60ef7aeb",
    "metadata": {},
    "outputs": [
@@ -2299,7 +2315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "5bf228b4",
    "metadata": {},
    "outputs": [
@@ -2321,7 +2337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "7296fc0c",
    "metadata": {},
    "outputs": [
@@ -2344,7 +2360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "e317c442",
    "metadata": {},
    "outputs": [
@@ -2368,7 +2384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "62ac097e",
    "metadata": {},
    "outputs": [
@@ -2389,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "00c063bb",
    "metadata": {},
    "outputs": [
@@ -2422,7 +2438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b7fc4d8b",
    "metadata": {},
    "outputs": [],
@@ -2432,7 +2448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5b60be89",
    "metadata": {},
    "outputs": [],
@@ -2442,7 +2458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c2ff64f5",
    "metadata": {},
    "outputs": [
@@ -2463,7 +2479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "aa5d25fe",
    "metadata": {},
    "outputs": [
@@ -2484,7 +2500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "770f08cd",
    "metadata": {},
    "outputs": [],
@@ -2494,7 +2510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "77d0215b",
    "metadata": {},
    "outputs": [
@@ -2515,7 +2531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "39509b0c",
    "metadata": {},
    "outputs": [
@@ -2536,7 +2552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f07bbe6d",
    "metadata": {},
    "outputs": [
@@ -2581,7 +2597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "b92dce17",
    "metadata": {},
    "outputs": [],
@@ -2596,7 +2612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "2c41dfe8",
    "metadata": {},
    "outputs": [
@@ -2607,17 +2623,6 @@
       "32\n",
       "50\n",
       "122\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
