day 5 codes commit

--- a/python-practice.ipynb
+++ b/python-practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "bddaa80b",
    "metadata": {},
    "outputs": [
@@ -13,7 +13,7 @@
        "       [ 1, -1]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "1bac42a3",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
        "       [13,  5]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,8 +57,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0f5e45ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1 = 'Python'\n",
+    "s2 = 'Programming'\n",
+    "s3 = \"\"\"line1\n",
+    "line2\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "87c1098e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'line1\\nline2'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cba6a567",
    "metadata": {},
    "outputs": [],
    "source": []
