--- a/python-practice.ipynb
+++ b/python-practice.ipynb
@@ -207,12 +207,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e429e67b",
+   "cell_type": "markdown",
+   "id": "66c8809f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Chapter 5: Classes and Objects in Python "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d9a5aa73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pet Details:\n",
+      "Name: Bucky\n",
+      "Age: 3\n",
+      "Category: Dog\n",
+      "Bucky has been vaccinated.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    def __init__(self, age, name, category):\n",
+    "        self.age = age\n",
+    "        self.name = name\n",
+    "        self.category = category\n",
+    "\n",
+    "    def vaccination(self):\n",
+    "        print(f\"{self.name} has been vaccinated.\")\n",
+    "\n",
+    "\n",
+    "class Pet(Animal):\n",
+    "    def pet_details(self):\n",
+    "        print(\"Pet Details:\")\n",
+    "        print(\"Name:\", self.name)\n",
+    "        print(\"Age:\", self.age)\n",
+    "        print(\"Category:\", self.category)\n",
+    "\n",
+    "        self.vaccination()\n",
+    "\n",
+    "\n",
+    "pet1 = Pet(3, \"Bucky\", \"Dog\")\n",
+    "\n",
+    "pet1.pet_details()\n"
+   ]
   }
  ],
  "metadata": {
