--- a/Python Test 18.02.26.ipynb
+++ b/Python Test 18.02.26.ipynb
@@ -145,17 +145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "id": "f7b27f3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Jhon:25, 85.0'}"
+       "{'John:25, 85.0'}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
     "]\n",
     "        return parsed_data\n",
     "{\n",
-    "    \"Jhon:25, 85.0\"\n",
+    "    \"John:25, 85.0\"\n",
     "}"
    ]
   },
