--- a/python-practice.ipynb
+++ b/python-practice.ipynb
@@ -211,7 +211,7 @@
    "id": "66c8809f",
    "metadata": {},
    "source": [
-    "## Chapter 5: Classes and Objects in Python "
+    "## Unit V: Classes and Objects in Python "
    ]
   },
   {
