--- a/python-practice.ipynb
+++ b/python-practice.ipynb
@@ -259,9 +259,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3823768f",
+   "metadata": {},
+   "source": [
+    "## \"\"\"Basic Arithmatic Operations.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c68a7ad4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import basic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2a4319af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "3\n",
+      "10\n",
+      "2.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = basic.basic(5,2)\n",
+    "print(a.add())\n",
+    "print(a.sub())\n",
+    "print(a.mul())\n",
+    "print(a.div())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2afacda",
+   "id": "373b9663",
    "metadata": {},
    "outputs": [],
    "source": []
