--- a/Experiments/Python Exp-6.ipynb
+++ b/Experiments/Python Exp-6.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a2c1749d",
    "metadata": {},
    "outputs": [
@@ -182,12 +182,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Names: dict_keys(['krish', 'raj'])\n",
-      "Cities: dict_values(['patna', 'raipur'])\n",
+      "Names: dict_keys(['Shreyansh Kumar Gupta'])\n",
+      "Cities: dict_values(['Patna'])\n",
       "Student Details:\n",
-      "krish lives in patna\n",
-      "raj lives in raipur\n",
-      "Students in each city: {'patna': 1, 'raipur': 1}\n"
+      "Shreyansh Kumar Gupta lives in Patna\n",
+      "Students in each city: {'Patna': 1}\n"
      ]
     }
    ],
@@ -235,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fe24a11f",
    "metadata": {},
    "outputs": [
@@ -245,16 +244,14 @@
      "text": [
       "\n",
       "All Movie Details:\n",
-      "rrr {'year': 2024, 'director': 'raja moli', 'cost': 500.0, 'collection': 900.0}\n",
-      "kick {'year': 2018, 'director': 'unknow', 'cost': 350.0, 'collection': 600.0}\n",
+      "Ra One {'year': 2011, 'director': 'Anubhav Sinha', 'cost': 350000000.0, 'collection': 2000000000.0}\n",
       "\n",
       "Movies released before 2015:\n",
+      "Ra One\n",
       "\n",
       "Profitable Movies:\n",
-      "rrr\n",
-      "kick\n",
-      "Movies directed by raja moli\n",
-      "rrr\n"
+      "Ra One\n",
+      "Movies directed by \n"
      ]
     }
    ],
@@ -300,6 +297,14 @@
     "    if details[\"director\"].lower() == search_director.lower():\n",
     "        print(name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77675a1b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
