--- a/Experiments/Python Exp-3.ipynb
+++ b/Experiments/Python Exp-3.ipynb
@@ -282,15 +282,15 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "Name: Pranamya Rana\n",
-                        "Roll number: R567823 \tSAPID: 590027662\n",
+                        "Name: Shreyansh Kumar Gupta\n",
+                        "Roll number: R010134 \tSAPID: 590020790\n",
                         "Sem: 1 \tCourse: BCA\n",
                         "\n",
                         "Subject Name \t:\t Marks\n",
@@ -306,9 +306,9 @@
                 }
             ],
             "source": [
-                "name = \"Pranamya Rana\"\n",
-                "r_num = \"R567823\"\n",
-                "sap_id = 590027662\n",
+                "name = \"Shreyansh Kumar Gupta\"\n",
+                "r_num = \"R010134\"\n",
+                "sap_id = 590020790\n",
                 "sem = 1\n",
                 "course = \"BCA\"\n",
                 "c = 80\n",
@@ -352,7 +352,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": ".venv",
+            "display_name": ".venv (3.10.11)",
             "language": "python",
             "name": "python3"
         },
@@ -366,7 +366,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.1"
+            "version": "3.10.11"
         }
     },
     "nbformat": 4,
