--- a/Experiments/Python Exp-7.ipynb
+++ b/Experiments/Python Exp-7.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4097da74",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Krish\n",
+      "Hello Shreyansh\n",
       "Hello Guest\n"
      ]
     }
@@ -287,7 +287,7 @@
     "def greet(name=\"Guest\"):\n",
     "    print(\"Hello\", name)\n",
     "\n",
-    "greet(\"Krish\")\n",
+    "greet(\"Shreyansh\")\n",
     "greet()"
    ]
   },
