--- a/Experiments/Python Exp-9.ipynb
+++ b/Experiments/Python Exp-9.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "90580d15",
    "metadata": {},
    "outputs": [
@@ -36,23 +36,23 @@
       "\n",
       "--- Student Details ---\n",
       "\n",
-      "Name: krish\n",
-      "SAP ID: 590020086\n",
-      "Physics: 89\n",
+      "Name: Shreyansh\n",
+      "SAP ID: 590020790\n",
+      "Physics: 70\n",
+      "Chemistry: 74\n",
+      "Maths: 60\n",
+      "\n",
+      "Name: Sandeep\n",
+      "SAP ID: 590021210\n",
+      "Physics: 80\n",
+      "Chemistry: 85\n",
+      "Maths: 70\n",
+      "\n",
+      "Name: mahin\n",
+      "SAP ID: 590023230\n",
+      "Physics: 75\n",
       "Chemistry: 78\n",
-      "Maths: 86\n",
-      "\n",
-      "Name: raj\n",
-      "SAP ID: 5202222333\n",
-      "Physics: 89\n",
-      "Chemistry: 57\n",
-      "Maths: 49\n",
-      "\n",
-      "Name: rhul\n",
-      "SAP ID: 7822665526\n",
-      "Physics: 85\n",
-      "Chemistry: 96\n",
-      "Maths: 74\n"
+      "Maths: 85\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2ab6e82d",
    "metadata": {},
    "outputs": [
@@ -113,13 +113,13 @@
       "\n",
       "Enter details of Student 1\n",
       "\n",
-      "Name: krish\n",
-      "SAP ID: 590020086\n",
-      "Marks: 89 76 86\n",
-      "Percentage: 83.66666666666667\n",
+      "Name: Shreyansh\n",
+      "SAP ID: 590020790\n",
+      "Marks: 75 74 60\n",
+      "Percentage: 69.66666666666667\n",
       "Result: Pass\n",
       "\n",
-      "Class Average: 83.66666666666667\n"
+      "Class Average: 69.66666666666667\n"
      ]
     }
    ],
