--- a/Experiments/Python Exp-4.ipynb
+++ b/Experiments/Python Exp-4.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "2b8a7052",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.10.11)",
    "language": "python",
    "name": "python3"
   },
@@ -446,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
